# g-shell

./: Cargo.toml  README.md  gsh
src/: HELPFILE  autoupdate.rs  download.rs  history.rs  keyFunctions.rs  main.rs  saveLastCheck.rs
src/docs/: HELPFILE
tools/: install.sh
