[package]
name = "gsh"
version = "0.0.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking"] }
colored = "2.0.4"
termion = "2.0.1"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1